--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-
-	<h1>👋 Hello World!</h1>
-  	<p>
-    In the body section is where you’ll write all of your HTML
-    and/or copy-and-paste it from drafts you make in codepen.io
-</p>
+	
+	<h4>New Media for Social Change<h4>
+	<h1>Physical Animation: Zoetrope</h1>
+	<h4>Isabel Faustino, Leah Mock, and Juan Santiago<h4>
+  	<p>During the making of our zoetropes, the first decisin we made was the issue we would focus on. We chose climate change.</p>
 
   </body>
 </html>
