--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<h1>Physical Animation: Zoetrope</h1>
 	<h4>Isabel Faustino, Leah Mock, and Juan Santiago<h4>
   	<p>During the making of our zoetropes, the first decisin we made was the issue we would focus on. We chose climate change.</p>
+	<img src="BoxandArrowModel.png" alt="Box and Arrow Model">
 
   </body>
 </html>
