--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
   </head>
   <body>
 	
-	<h4>New Media for Social Change<h4>
+	<h4>New Media for Social Change</h4>
 	<h1>Physical Animation: Zoetrope</h1>
-	<h4>Isabel Faustino, Leah Mock, and Juan Santiago<h4>
-  	<p>During the making of our zoetropes, the first decisin we made was the issue we would focus on. We chose climate change.</p>
+	<h4>Isabel Faustino, Leah Mock, and Juan Santiago</h4>
+  	<p>During the making of our zoetropes, the first decision we made was the issue we would focus on. We chose climate change.</p>
 	<img src="BoxandArrowModel.png" alt="Box and Arrow Model">
-
+	<p>Based on the box and arrow model we made, we decided to target an everyday behavior that most people partake in: transportation from place to place. Using cars produces large amounts of carbon emissions, so we decided to try to convince people to use bicycles, a cleaner and greener form of transportation.</p>
+	
+	  
   </body>
 </html>
