--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 	<h4>Isabel Faustino, Leah Mock, and Juan Santiago</h4>
   	<p>During the making of our zoetropes, the first decision we made was the issue we would focus on. We chose climate change.</p>
 	<img src="BoxandArrowModel.png" alt="Box and Arrow Model">
-	<p>Based on the box and arrow model we made, we decided to target an everyday behavior that most people partake in: transportation from place to place. Using cars produces large amounts of carbon emissions, so we decided to try to convince people to use bicycles, a cleaner and greener form of transportation.</p>
-	
+	<p>Based on the box and arrow model we made, we decided to target an everyday behavior that most people partake in: transportation from place to place. Using cars produces large amounts of carbon emissions, but we understood that people still needed to travel often, so we decided to try to convince people to use bicycles. Bicycles are a much cleaner form of transportation, as they do not produce any carbon emissions.</p>
+	<img src="Storyboard.jpeg" alt="Storyboard showing a character being harmed by a car and benefitted by a bicycle.">
+	<p>We then mapped out the story of our zoetrope. Originally, we planned to have one zoetrope with a continuous animation. We placed our character in an environment that would first be affect by a car producing carbon emissions, then by a bicycle producing nothing. This would compare the effects of each form of transportation on the environment and people in it.
 	  
   </body>
 </html>
