--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 	<p>Based on the box and arrow model we made, we decided to target an everyday behavior that most people partake in: transportation from place to place. Using cars produces large amounts of carbon emissions, but we understood that people still needed to travel often, so we decided to try to convince people to use bicycles. Bicycles are a much cleaner form of transportation, as they do not produce any carbon emissions.</p>
 	<img src="Storyboard.jpeg" alt="Storyboard showing a character being harmed by a car and benefitted by a bicycle.">
 	<p>We then mapped out the story of our zoetrope. Originally, we planned to have one zoetrope with a continuous animation. We placed our character in an environment that would first be affect by a car producing carbon emissions, then by a bicycle producing nothing. This would compare the effects of each form of transportation on the environment and people in it.</p>
+	<img src="ProtagonistAntagonist.png" alt="Description of the protagonist and the antagonist.">
+	<p>Next, we developed the characters, set, and mechanism of the zoetrope. One trait that is important to the protagonist's character is the ability to mitigate climate change, because this is part of the message that we wanted to instill in our viewer. After we developed our characters, we began working on the set and design of the zoetrope, using a Cricut to test out different designs for the character, car, and bicycle.</p>
+	
 	  
   </body>
 </html>
