--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 	<p>Next, we used the Cricut to print many small bicycles and cars. We determined that this would be our final method, as it was much quicker and more uniform, but we had to replace the design we used due to the fragility of the paper once it was removed from the Cricut mat. At this point, we decided to make two zoetropes, because we realized that our animation would be too long for one zoetrope. We chose to separate the zoetropes, making one with a car and one with a bike.</p>
 	<img src="MakingtheFinal.jpeg" alt="Zoetrope template.">
 	<p>To build the zoetrope, we decided to use a template with vertical slits. This would eliminate a lot of time building the zoetrope, as we already had a base to build it. We cut out the template, supported the outside with cardstock, and began gluing the Cricut printouts to the inside. We cut a small hole in the base to accomodate the motor, and further support the base with popsicle sticks.</p>
-	<img src="MakingtheFinal.jped" alt="The almost-complete zoetrope.">
+	<img src="MakingtheFinal2.jpeg" alt="The almost-complete zoetrope.">
+	<p>We added a few more design aspects, such as a road for the bicycle and car, a sidewalk for the character, and drawn grey carbon emissions on the zoetrope with the car."</p>
 	  
   </body>
 </html>
