--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
 	<img src="MakingtheFinal.jpeg" alt="Zoetrope template.">
 	<p>To build the zoetrope, we decided to use a template with vertical slits. This would eliminate a lot of time building the zoetrope, as we already had a base to build it. We cut out the template, supported the outside with cardstock, and began gluing the Cricut printouts to the inside. We cut a small hole in the base to accomodate the motor, and further support the base with popsicle sticks.</p>
 	<img src="MakingtheFinal2.jpeg" alt="The almost-complete zoetrope.">
-	<p>We added a few more design aspects, such as a road for the bicycle and car, a sidewalk for the character, and drawn grey carbon emissions on the zoetrope with the car."</p>
+	<p>We added a few more design aspects, such as a road for the bicycle and car, a sidewalk for the character, and drawn grey carbon emissions on the zoetrope with the car.</p>
+	<img src="CodingProcess.jpeg" alt="The process of coding the motor.">
+	<p>While my partners worked on aspects of the design, I coded the program for the motor.</p>
+	<img src="FinalCode.png" alt="The final code.">
+	<p>The final code caused the motor to spin when button A was pressed and to stop when button B was pressed. The code also allowed us to adjust the speed of the motor from the interactive components of the Crickit board that connected to the motor.</p>
+
 	  
   </body>
 </html>
