--- a/index.html
+++ b/index.html
@@ -12,27 +12,33 @@
 	<h4>New Media for Social Change</h4> 
 	<h1>Physical Animation: Zoetrope</h1>
 	<h4>Isabel Faustino, Leah Mock, and Juan Santiago</h4>
-	<h2>The Process</h2>
-  	<p>During the making of our zoetropes, the first decision we made was the issue we would focus on. We chose climate change.</p>
-	<img src="BoxandArrowModel.png" alt="Box and Arrow Model">
-	<p>Based on the box and arrow model we made, we decided to target an everyday behavior that most people partake in: transportation from place to place. Using cars produces large amounts of carbon emissions, but we understood that people still needed to travel often, so we decided to try to convince people to use bicycles. Bicycles are a much cleaner form of transportation, as they do not produce any carbon emissions.</p>
-	<img src="Storyboard.jpeg" alt="Storyboard showing a character being harmed by a car and benefitted by a bicycle.">
-	<p>We then mapped out the story of our zoetrope. Originally, we planned to have one zoetrope with a continuous animation. We placed our character in an environment that would first be affect by a car producing carbon emissions, then by a bicycle producing nothing. This would compare the effects of each form of transportation on the environment and people in it.</p>
-	<img src="ProtagonistAntagonist.png" alt="Description of the protagonist and the antagonist.">
-	<p>Next, we developed the characters, set, and mechanism of the zoetrope. One trait that is important to the protagonist's character is the ability to mitigate climate change, because this is part of the message that we wanted to instill in our viewer. After we developed our characters, we began working on the set and design of the zoetrope, using clay and the Cricut to test out different designs for the character, car, and bicycle.</p>
-	<img src="ClaySteve.jpeg" alt="Clay model of a man." style="width:600px;">
-	<p>We first tested out our character's physical design with clay, but we decided that it would be much to heavy and time consuming to make so many clay models of the character.</p>
-	<img src="Cricut2.jpeg" alt="Printed designs from the Cricut.">
-	<p>Next, we used the Cricut to print many small bicycles and cars. We determined that this would be our final method, as it was much quicker and more uniform, but we had to replace the design we used due to the fragility of the paper once it was removed from the Cricut mat. At this point, we decided to make two zoetropes, because we realized that our animation would be too long for one zoetrope. We chose to separate the zoetropes, making one with a car and one with a bike.</p>
-	<img src="MakingtheFinal.jpeg" alt="Zoetrope template.">
-	<p>To build the zoetrope, we decided to use a template with vertical slits. This would eliminate a lot of time building the zoetrope, as we already had a base to build it. We cut out the template, supported the outside with cardstock, and began gluing the Cricut printouts to the inside. We cut a small hole in the base to accomodate the motor, and further support the base with popsicle sticks.</p>
-	<img src="MakingtheFinal2.jpeg" alt="The almost-complete zoetrope.">
-	<p>We added a few more design aspects, such as a road for the bicycle and car, a sidewalk for the character, and drawn grey carbon emissions on the zoetrope with the car.</p>
-	<img src="CodingProcess.jpeg" alt="The process of coding the motor.">
-	<p>While my partners worked on aspects of the design, I coded the program for the motor.</p>
-	<img src="FinalCode.png" alt="The final code.">
-	<p>The final code caused the motor to spin when button A was pressed and to stop when button B was pressed. The code also allowed us to adjust the speed of the motor from the interactive components of the Crickit board that connected to the motor.</p>
+		<h2>The Process</h2>
+  			<p>During the making of our zoetropes, the first decision we made was the issue we would focus on. We chose climate change.</p>
+			<img src="BoxandArrowModel.png" alt="Box and Arrow Model">
+			<p>Based on the box and arrow model we made, we decided to target an everyday behavior that most people partake in: transportation from place to place. Using cars produces large amounts of carbon emissions, but we understood that people still needed to travel often, so we decided to try to convince people to use bicycles. Bicycles are a much cleaner form of transportation, as they do not produce any carbon emissions.</p>
+			<img src="Storyboard.jpeg" alt="Storyboard showing a character being harmed by a car and benefitted by a bicycle.">
+			<p>We then mapped out the story of our zoetrope. Originally, we planned to have one zoetrope with a continuous animation. We placed our character in an environment that would first be affect by a car producing carbon emissions, then by a bicycle producing nothing. This would compare the effects of each form of transportation on the environment and people in it.</p>
+			<img src="ProtagonistAntagonist.png" alt="Description of the protagonist and the antagonist.">
+			<p>Next, we developed the characters, set, and mechanism of the zoetrope. One trait that is important to the protagonist's character is the ability to mitigate climate change, because this is part of the message that we wanted to instill in our viewer. After we developed our characters, we began working on the set and design of the zoetrope, using clay and the Cricut to test out different designs for the character, car, and bicycle.</p>
+			<img src="ClaySteve.jpeg" alt="Clay model of a man." style="width:600px;">
+			<p>We first tested out our character's physical design with clay, but we decided that it would be much to heavy and time consuming to make so many clay models of the character.</p>
+			<img src="Cricut2.jpeg" alt="Printed designs from the Cricut.">
+			<p>Next, we used the Cricut to print many small bicycles and cars. We determined that this would be our final method, as it was much quicker and more uniform, but we had to replace the design we used due to the fragility of the paper once it was removed from the Cricut mat. At this point, we decided to make two zoetropes, because we realized that our animation would be too long for one zoetrope. We chose to separate the zoetropes, making one with a car and one with a bike.</p>
+			<img src="MakingtheFinal.jpeg" alt="Zoetrope template.">
+			<p>To build the zoetrope, we decided to use a template with vertical slits. This would eliminate a lot of time building the zoetrope, as we already had a base to build it. We cut out the template, supported the outside with cardstock, and began gluing the Cricut printouts to the inside. We cut a small hole in the base to accomodate the motor, and further support the base with popsicle sticks.</p>
+			<img src="MakingtheFinal2.jpeg" alt="The almost-complete zoetrope.">
+			<p>We added a few more design aspects, such as a road for the bicycle and car, a sidewalk for the character, and drawn grey carbon emissions on the zoetrope with the car.</p>
+			<img src="CodingProcess.jpeg" alt="The process of coding the motor.">
+			<p>While my partners worked on aspects of the design, I coded the program for the motor.</p>
+			<img src="FinalCode.png" alt="The final code.">
+			<p>The final code caused the motor to spin when button A was pressed and to stop when button B was pressed. The code also allowed us to adjust the speed of the motor from the interactive components of the Crickit board that connected to the motor. Finally, we were able to assemble our zoetropes.</p>
 
+		  <h2>The Final Product</h2>	
+	  		<video width="500" controls>
+ 				<source src="CarZoetrope.MOV" type="video/MOV">
+				Your browser does not support the video tag.
+			</video>
+	  
 	  
   </body>
 </html>
