--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
  				<source src="CarZoetrope.MOV" type="video/MOV">
 				Your browser does not support the video tag.
 			</video>
+			<video width="500" controls>
+ 				<source src="BikeZoetrope.MOV" type="video/MOV">
+				Your browser does not support the video tag.
+			</video>
 	  
 	  
   </body>
