--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
 				Your browser does not support the video tag.
 			</video>
 	  
+		  <h2>Behind-the-Scenes Photos</h2>
+	  
+	  
 	  
   </body>
 </html>
