--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@
 			<img src="MakingtheFinal2.jpeg" alt="The almost-complete zoetrope.">
 			<p>We added a few more design aspects, such as a road for the bicycle and car, a sidewalk for the character, and drawn grey carbon emissions on the zoetrope with the car.</p>
 			<img src="CodingProcess.jpeg" alt="The process of coding the motor.">
-			<p>While my partners worked on aspects of the design, I coded the program for the motor.</p>
+			<p>While my partners worked on aspects of the design, I coded the program for the motor. We used the MakeCode platform connected to a Crickit board, which allowed me to easily block-code the motor</p>
 			<img src="FinalCode.png" alt="The final code.">
-			<p>The final code caused the motor to spin when button A was pressed and to stop when button B was pressed. The code also allowed us to adjust the speed of the motor from the interactive components of the Crickit board that connected to the motor. Finally, we were able to assemble our zoetropes.</p>
+			<p>The final code caused the motor to spin when button A was pressed and to stop when button B was pressed. The code also allowed us to adjust the speed of the motor from the interactive components of the Crickit board that connected to the motor.</p>
 
-		  <h2>The Final Product</h2>	
+		  <h2>The Final Product</h2>
+	  		<p>Finally, we assembled our zoetropes. We cut slits into the base using the guidelines on the template, then slotted the vertical section into the slits. We connected the motor and adjusted the speed, and we were able to see the our zoetropes worked.</p>
 	  		<video width="500" controls>
  				<source src="CarZoetrope.MOV" type="video/MOV">
 				Your browser does not support the video tag.
