--- a/index.html
+++ b/index.html
@@ -36,13 +36,14 @@
 		  <h2>The Final Product</h2>
 	  		<p>Finally, we assembled our zoetropes. We cut slits into the base using the guidelines on the template, then slotted the vertical section into the slits. We connected the motor and adjusted the speed, and we were able to see the our zoetropes worked.</p>
 	  		<video width="500" controls>
- 				<source src="CarZoetrope.MOV" type="video/MOV">
+ 				<source src="CarZoetrope.mp4" type="video/mp4">
 				Your browser does not support the video tag.
 			</video>
 			<video width="500" controls>
- 				<source src="BikeZoetrope.MOV" type="video/MOV">
+ 				<source src="BikeZoetrope.mp4" type="video/mp4">
 				Your browser does not support the video tag.
 			</video>
+	  		<p>While the final product of our physical animation does deviate signficantly from our original plan, we believe that it is still effective in conveying our message. We wanted people who see our zoetrope to understand how their transportation choices impact the environment, which our zoetropes accomplish. Additionally, having two zoetropes allows the viewer to compare the forms of transportation shown, which can influence how they choose to travel once they have seen the compared effects of bicycles and cars.</p>
 	  
 		  <h2>Behind-the-Scenes Photos</h2>
 	  
