--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<p>The final code caused the motor to spin when button A was pressed and to stop when button B was pressed. The code also allowed us to adjust the speed of the motor from the interactive components of the Crickit board that connected to the motor.</p>
 
 		  <h2>The Final Product</h2>
-	  		<p>Finally, we assembled our zoetropes. We cut slits into the base using the guidelines on the template, then slotted the vertical section into the slits. We connected the motor and adjusted the speed, and we were able to see the our zoetropes worked.</p>
+	  		<p>Finally, we assembled our zoetropes. We cut slits into the base using the guidelines on the template, then slotted the vertical section into the slits. We connected the motor and adjusted the speed, and we were able to see that our zoetropes worked.</p>
 	  		<video width="500" controls>
  				<source src="CarZoetrope.mp4" type="video/mp4">
 				Your browser does not support the video tag.
