--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
 
 		  <h2>The Final Product</h2>
 	  		<p>Finally, we assembled our zoetropes. We cut slits into the base using the guidelines on the template, then slotted the vertical section into the slits. We connected the motor and adjusted the speed, and we were able to see that our zoetropes worked.</p>
-	  		<video width="500" controls>
+	  		<video width="500" height="1200" controls>
  				<source src="CarZoetrope.mp4" type="video/mp4">
 				Your browser does not support the video tag.
 			</video>
-			<video width="500" controls>
+			<video width="500" height="1200" controls>
  				<source src="BikeZoetrope.mp4" type="video/mp4">
 				Your browser does not support the video tag.
 			</video>
