--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
 	  		<p>While the final product of our physical animation does deviate signficantly from our original plan, we believe that it is still effective in conveying our message. We wanted people who see our zoetrope to understand how their transportation choices impact the environment, which our zoetropes accomplish. Additionally, having two zoetropes allows the viewer to compare the forms of transportation shown, which can influence how they choose to travel once they have seen the compared effects of bicycles and cars.</p>
 	  
 		  <h2>Behind-the-Scenes Photos</h2>
+	  		<img src="BTS1.jpeg" alt="Building the zoetrope.">
+	  		<img src="BTS2.jpeg" alt="Building the zoetrope.">
+	  		<img src="BTS3.jpeg" alt="Building the zoetrope.">
+	  
 	  
 	  
 	  
