--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 	  		<img src="BTS1.jpeg" alt="Building the zoetrope.">
 	  		<img src="BTS2.jpeg" alt="Building the zoetrope.">
 	  		<img src="BTS3.jpeg" alt="Building the zoetrope.">
+		  <p>Behind-the-scenes photos of building the zoetrope.</p>
 	  
 	  
 	  
