--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<img src="ProtagonistAntagonist.png" alt="Description of the protagonist and the antagonist.">
 			<p>Next, we developed the characters, set, and mechanism of the zoetrope. One trait that is important to the protagonist's character is the ability to mitigate climate change, because this is part of the message that we wanted to instill in our viewer. After we developed our characters, we began working on the set and design of the zoetrope, using clay and the Cricut to test out different designs for the character, car, and bicycle.</p>
 			<img src="ClaySteve.jpeg" alt="Clay model of a man." style="width:600px;">
-			<p>We first tested out our character's physical design with clay, but we decided that it would be much to heavy and time consuming to make so many clay models of the character.</p>
+			<p>We first tested out our character's physical design with clay, but we decided that it would be much too heavy and time consuming to make so many clay models of the character.</p>
 			<img src="Cricut2.jpeg" alt="Printed designs from the Cricut.">
 			<p>Next, we used the Cricut to print many small bicycles and cars. We determined that this would be our final method, as it was much quicker and more uniform, but we had to replace the design we used due to the fragility of the paper once it was removed from the Cricut mat. At this point, we decided to make two zoetropes, because we realized that our animation would be too long for one zoetrope. We chose to separate the zoetropes, making one with a car and one with a bike.</p>
 			<img src="MakingtheFinal.jpeg" alt="Zoetrope template.">
